fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,6 @@ header {
   max-width: 100%;
 }
 
-
 h1 {
   text-align: center;
   font-family: "Sigmar One", sans-serif;
@@ -30,7 +29,7 @@ h1 {
 
 a {
   display: inline;
-  border: 3px soild #cc1465;
+  border: 3px solid #cc1465;
   text-decoration: none;
   list-style-type: none;
   background-color: #b2a212;
